@@ -1,3 +1,7 @@
+2007-09-14  Dan Nicolaescu  <dann@ics.uci.edu>
+
+	* term/xterm.el (terminal-init-xterm): Add C-M- bindings.
+
 2007-09-14  Stefan Monnier  <monnier@iro.umontreal.ca>
 
 	* vc-mtn.el: New file.
